--- a/about.html
+++ b/about.html
@@ -25,6 +25,22 @@
         <div class="chat2">KyleKart Botting is a discord bot!</div>
 <div class="chat1">Does it have any fun commands?</div>
 <div class="chat2">It has an pretty cool 8-ball command!</div>
+        
+        <div class="container">
+<p>Hello. How are you today?</p>
+</div>
+
+<div class="container darker">
+  <p>Hey! I'm fine. Thanks for asking!</p>
+</div>
+
+<div class="container">
+  <p>Sweet! So, what do you wanna do today?</p>
+</div>
+
+<div class="container darker">
+  <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
+</div>
 
     </div>
     <br><br><br><br><br>
