--- a/about.html
+++ b/about.html
@@ -27,19 +27,19 @@
 <div class="chat2">It has an pretty cool 8-ball command!</div>
         
         <div class="container">
-<p>Hello. How are you today?</p>
+<p>What is KyleKart Botting?</p>
 </div>
 
 <div class="container darker">
-  <p>Hey! I'm fine. Thanks for asking!</p>
+  <p>KyleKart Botting is a discord bot!</p>
 </div>
 
 <div class="container">
-  <p>Sweet! So, what do you wanna do today?</p>
+  <p>Does it have any fun commands?</p>
 </div>
 
 <div class="container darker">
-  <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
+  <p>It has an pretty cool 8-ball command!</p>
 </div>
 
     </div>
