--- a/index.html
+++ b/index.html
@@ -1,25 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-    <link rel="stylesheet" href="Style.css">
-    <title>KyleKart Botting</title>
-    <link rel="icon" href="favicon-32x32.png" type="image/x-icon">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="KyleKart Botting is a Discord bot with some fun commands!" />
-    <meta name="keywords" content="KyleKart, Discord, Discord bot, KyleKart Botting, KyleKart Gaming" />
-</head>
-
-<body>
-    <header id="header">
-        <a class="logo" href="index.html">KyleKart Botting</a>
-        <a class="links" href="about.html">About</a>
-        <a class="links" href="commands.html">Commands</a>
-    </header>
-
-    <div class="title">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div>
-    <br><br><br><br><br>
-    <div class="footer"><div class="footerText">oh look, a footer</div></div>
-</body></html>
+    <title>Website Name</title>
+    <meta content="Embed Title" property="og:title">
+  <meta content="Site Description" property="og:description">
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url">
+    <meta content="https://embed.com/embedimage.png" property="og:image">
+    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL-UGqg4wtd5QhJaofQgFp5NTLp15g65q4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
