--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
     <title>Website Name</title>
-    <meta content="Embed Title" property="og:title">
-  <meta content="Site Description" property="og:description">
+    <meta content="KyleKart Gaming Merch!" property="og:title">
+  <meta content="My new merch store!" property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
     <meta content="https://embed.com/embedimage.png" property="og:image">
-    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+    <meta content="#ff8100" data-react-helmet="true" name="theme-color">
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/embed/tkRqPZAv3d8'" />
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL-UGqg4wtd5QhJaofQgFp5NTLp15g65q4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
