--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <meta content="KyleKart Gaming Merch!" property="og:title">
   <meta content="My new merch store!" property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
-    <meta content="https://cdn.discordapp.com/attachments/851911545550405727/852269959870808094/0001-2635144784.png" property="og:image">
+    <meta content="/banner.png" property="og:image">
     <meta content="#ff8100" data-react-helmet="true" name="theme-color">
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/embed/tkRqPZAv3d8'" />
