--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <title>Website Name</title>
     <meta content="KyleKart Gaming Merch!" property="og:title">
-  <meta content="My new merch store!" property="og:description">
+  <meta content="My epic merch store!" property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
     <meta content="/banner.png" property="og:image">
     <meta content="#ff8100" data-react-helmet="true" name="theme-color">
