--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
     <meta content="/banner.png" property="og:image">
     <meta content="#ff8100" data-react-helmet="true" name="theme-color">
-<meta http-equiv="Refresh" content="0; url='https://www.youtube.com/embed/tkRqPZAv3d8'" />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tkRqPZAv3d8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
