--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
     <meta content="/banner.png" property="og:image">
     <meta content="#ff8100" data-react-helmet="true" name="theme-color">
-
+<script>
 window.location.replace("https://www.youtube.com/embed/tkRqPZAv3d8?controls=0&autoplay=1");
+</script>
