--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta content="KyleKart Gaming Merch!" property="og:title">
   <meta content="My epic merch store!" property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
-    <meta content="/banner.png" property="og:image">
+    <meta content="/Banner.png" property="og:image">
     <meta content="#ff8100" data-react-helmet="true" name="theme-color">
 <script>
 window.location.replace("https://www.youtube.com/embed/tkRqPZAv3d8?controls=0&autoplay=1");
